--- a/android-app/settings.gradle
+++ b/android-app/settings.gradle
@@ -1,16 +1,14 @@
 pluginManagement {
     repositories {
-        gradlePluginPortal()
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
 }
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FALL_ON_PROJECT_REPOS)
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)  // ← ИСПРАВЬТЕ ЗДЕСЬ
     repositories {
         google()
         mavenCentral()
     }
 }
-rootProject.name = "YellowTractorBarbershop"
-include ':app'
