--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,4 +1,4 @@
-name: Build Android APK Simple
+name: Build Android APK
 
 on:
   push:
@@ -19,18 +19,24 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         
-    - name: Setup Android SDK and Gradle
+    - name: Setup Android SDK
       uses: android-actions/setup-android@v3
       
-    - name: Build with system Gradle
+    - name: Debug project structure
+      run: |
+        echo "=== Project Structure ==="
+        find . -name "*.gradle" -type f | head -10
+        echo "=== settings.gradle content ==="
+        cat android-app/settings.gradle || echo "settings.gradle not found"
+        
+    - name: Build APK
       run: |
         cd android-app
-        # Используем системный Gradle вместо gradlew
-        gradle assembleDebug
+        gradle assembleDebug --no-daemon
         
-    - name: Upload APK
+    - name: Upload APK artifact
       uses: actions/upload-artifact@v4
       with:
-        name: app-apk
-        path: android-app/app/build/outputs/apk/debug/app-debug.apk
+        name: android-app-apk
+        path: android-app/app/build/outputs/apk/**/*.apk
         retention-days: 30
