--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,9 +1,7 @@
-name: Build Android APK
+name: Find and Build Android Project
 
 on:
-  push:
-    branches: [ main, master ]
-  workflow-dispatch:
+  workflow_dispatch:
 
 jobs:
   build:
@@ -13,41 +11,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v3
-      
-    - name: Debug project structure
+    - name: Find Android projects
       run: |
-        echo "=== Full project structure ==="
-        find . -type f -name "*.gradle" -o -name "*.kts" | head -20
-        echo "=== android-app directory ==="
-        ls -la android-app/
-        echo "=== Subdirectories ==="
-        find android-app -type d -maxdepth 3 | head -20
-        echo "=== Build files ==="
-        find android-app -name "build.gradle" -o -name "build.gradle.kts" | head -10
+        echo "=== Searching for Android projects ==="
+        find . -name "AndroidManifest.xml" -type f | head -10
+        find . -name "build.gradle" -type f | head -10
+        find . -name "apk" -type d | head -10
         
-    - name: Check available Gradle tasks
+    - name: Try building from root
       run: |
-        cd android-app
-        gradle tasks --no-daemon | grep -i "assemble\|build\|android" | head -20 || echo "No relevant tasks found"
-        
-    - name: Try different build commands
-      run: |
-        cd android-app
-        # Попробуем разные варианты сборки
-        echo "Attempt 1: Basic build"
-        gradle build --no-daemon || echo "Build failed"
-        
-        echo "Attempt 2: Find Android modules"
-        gradle projects --no-daemon | grep -i "android\|app" || echo "No Android projects found"
-        
-    - name: Search for APK files
-      run: |
-        find . -name "*.apk" -type f | head -5 || echo "No APK files found"
+        # Попробуем собрать из корня, если там есть Gradle проект
+        gradle tasks --no-daemon | grep -i "android\|assemble" | head -10 || echo "No Android tasks in root"
