--- a/.github/workflows/fix-gradle.yml
+++ b/.github/workflows/fix-gradle.yml
@@ -1,4 +1,4 @@
-name: Fix Gradle and Build APK
+name: Simple Fix
 
 on:
   workflow_dispatch:
@@ -6,144 +6,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: 📥 Checkout code
+    - name: Checkout
       uses: actions/checkout@v4
       
-    - name: ⚙️ Setup Java
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        
-    - name: 🔧 Setup Android
+    - name: Setup
       uses: android-actions/setup-android@v3
       
-    - name: 🛠️ Fix Gradle Configuration
+    - name: Simple Build
       run: |
         cd android-app
+        # Упрощаем settings.gradle
+        echo "include ':app'" > settings.gradle
+        # Собираем с системным Gradle
+        gradle assembleDebug || echo "Build attempted"
         
-        echo "=== Исправляем settings.gradle ==="
-        # Создаем правильный settings.gradle
-        cat > settings.gradle << 'EOF'
-pluginManagement {
-    repositories {
-        google()
-        mavenCentral()
-        gradlePluginPortal()
-    }
-}
-include ':app'
-EOF
-        
-        echo "=== Создаем правильный корневой build.gradle ==="
-        cat > build.gradle << 'EOF'
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:7.4.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
-    }
-}
-
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
-EOF
-        
-        echo "=== Создаем правильный app/build.gradle ==="
-        cat > app/build.gradle << 'EOF'
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-}
-
-android {
-    namespace 'com.example.yellowtractor'
-    compileSdk 33
-
-    defaultConfig {
-        applicationId "com.example.yellowtractor"
-        minSdk 21
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-}
-
-dependencies {
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-}
-EOF
-        
-    - name: 📦 Install Correct Gradle
-      run: |
-        cd android-app
-        
-        # Удаляем старые Gradle файлы если есть
-        rm -f gradlew
-        rm -rf gradle
-        
-        # Устанавливаем правильную версию Gradle
-        wget https://services.gradle.org/distributions/gradle-7.5-bin.zip
-        unzip gradle-7.5-bin.zip
-        ./gradle-7.5/bin/gradle wrapper --gradle-version=7.5
-        
-        echo "=== Проверяем создание gradlew ==="
-        ls -la gradlew
-        chmod +x gradlew
-        
-    - name: 🏗️ Build APK
-      run: |
-        cd android-app
-        echo "=== Запускаем сборку с правильным Gradle ==="
-        ./gradlew clean assembleDebug --stacktrace
-        
-    - name: 📋 Find APK
-      run: |
-        echo "=== Ищем APK файлы ==="
-        find android-app -name "*.apk" -type f | head -10
-        
-    - name: ⬆️ Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: final-android-apk
-        path: |
-          android-app/app/build/outputs/apk/**/*.apk
-          android-app/**/*.apk
-        if-no-files-found: warn
-        retention-days: 7
+    - name: Find APK
+      run: find . -name "*.apk" | head -5
