--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -3,75 +3,33 @@ name: Android Build
 on:
   workflow_dispatch:
   push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Java
+    - uses: actions/checkout@v4
+    
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        distribution: 'temurin'
         java-version: '17'
-      
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v3
-      
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
-      
-    - name: Build Debug APK
-      run: |
-        ./gradlew assembleDebug --no-daemon --stacktrace
-      
-    - name: Build Release APK
-      run: |
-        ./gradlew assembleRelease --no-daemon --stacktrace
-      
-    - name: Find and list APK files
-      run: |
-        echo "## 📱 Found APK files:" >> $GITHUB_STEP_SUMMARY
-        APK_FILES=$(find . -name "*.apk" -type f)
-        if [ -z "$APK_FILES" ]; then
-          echo "❌ No APK files found" >> $GITHUB_STEP_SUMMARY
-          echo "Searching in build outputs..."
-          find . -type d -name "outputs" | head -10
-        else
-          echo "$APK_FILES" | while read file; do
-            echo "✅ **$file**" >> $GITHUB_STEP_SUMMARY
-            echo "Size: $(du -h "$file" | cut -f1)" >> $GITHUB_STEP_SUMMARY
-          done
-        fi
-        # Show directory structure for debugging
-        echo "## 📁 Build outputs structure:" >> $GITHUB_STEP_SUMMARY
-        find app/build/outputs -type f -name "*.apk" 2>/dev/null | head -10 >> $GITHUB_STEP_SUMMARY || echo "No outputs directory found" >> $GITHUB_STEP_SUMMARY
+        distribution: 'temurin'
         
-    - name: Upload Debug APK
+    - name: Change wrapper permissions
+      run: chmod +x gradlew
+      
+    - name: Build with Gradle
+      run: |
+        ./gradlew assembleDebug
+        ./gradlew assembleRelease
+        
+    - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: debug-apk
-        path: app/build/outputs/apk/debug/*.apk
-        retention-days: 30
-        if-no-files-found: warn
-        
-    - name: Upload Release APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: release-apk
-        path: app/build/outputs/apk/release/*.apk
-        retention-days: 30
-        if-no-files-found: warn
-        
-    - name: Upload all APKs (backup)
-      uses: actions/upload-artifact@v4
-      with:
-        name: all-apk-files
-        path: "**/*.apk"
-        retention-days: 7
-        if-no-files-found: ignore
+        name: app-apks
+        path: |
+          app/build/outputs/apk/debug/
+          app/build/outputs/apk/release/
